--- a/configs/exp.yaml
+++ b/configs/exp.yaml
@@ -4,6 +4,7 @@ data:
   dataset:
     name: mnist
     path: ./data
+    channel_dim: 1
   distribution:
     name: iid
   sampling_perc: 1
@@ -13,7 +14,7 @@ data:
   server_split: 0.0 # not used in this case
   uniform_test: false
 exp:
-  device: cpu
+  device: cuda
   seed: 42
 eval:
   task: classification
@@ -21,11 +22,11 @@ eval:
   pre_fit: true
   post_fit: true
 logger:
-  name: Log
+  name: WandBLog
   # name: WandBLog
   # project: test-release
   # entity: mlgroup
 protocol:
   eligible_perc: 0.2
-  n_clients: 10
-  n_rounds: 10
+  n_clients: 100
+  n_rounds: 100
