--- a/configs/feddyn.yaml
+++ b/configs/feddyn.yaml
@@ -1,12 +1,12 @@
 hyperparameters:
   client:
     alpha: 0.01
-    batch_size: 32
-    local_epochs: 5
+    batch_size: 50
+    local_epochs: 50
     loss: CrossEntropyLoss
     optimizer:
       lr: 0.1
-      # weight_decay: 0.0001
+      weight_decay: 0.0001
     scheduler:
       gamma: 1
       step_size: 1
