--- a/configs/fednova.yaml
+++ b/configs/fednova.yaml
@@ -8,9 +8,10 @@ hyperparameters:
       # momentum: 0.9
       # weight_decay: 0.0001
     scheduler:
+      # name: ConcatScheduler
       gamma: 1
       step_size: 1
   server:
     weighted: true
-  model: MNIST_2NN
+  model: fluke.utils.vgg11.VGG11
 name: fluke.algorithms.fednova.FedNova
