--- a/configs/fednova.yaml
+++ b/configs/fednova.yaml
@@ -1,17 +1,17 @@
 hyperparameters:
   client:
     batch_size: 32
-    local_epochs: 5
+    local_epochs: 2
     loss: CrossEntropyLoss
     optimizer:
       lr: 0.1
-      # momentum: 0.9
+      momentum: 0.9
       # weight_decay: 0.0001
     scheduler:
-      # name: ConcatScheduler
-      gamma: 1
-      step_size: 1
+      name: MultiStepLR
+      milestones: [50]
+      gamma: 0.1
   server:
     weighted: true
-  model: fluke.utils.vgg11.VGG11
+  model: vgg11.VGG11
 name: fluke.algorithms.fednova.FedNova
