--- a/configs/moon.yaml
+++ b/configs/moon.yaml
@@ -1,18 +1,18 @@
 hyperparameters:
   client:
-    batch_size: 32
-    local_epochs: 5
+    batch_size: 64
+    local_epochs: 10
     loss: CrossEntropyLoss
-    mu: 1
+    mu: 5 # abbassare per ridurre carico computazionale?
     optimizer:
-      lr: 0.1
-      # momentum: 0.9
-      # weight_decay: 0.0001
+      lr: 0.01
+      momentum: 0.9
+      weight_decay: 0.00001
     scheduler:
       gamma: 1
       step_size: 1
-    tau: 0.2
+    tau: 0.2 # not described in the original paper
   server:
     weighted: true
-  model: MNIST_2NN
+  model: MoonCNN
 name: fluke.algorithms.moon.MOON
