--- a/configs/exp_nova.yaml
+++ b/configs/exp_nova.yaml
@@ -6,25 +6,26 @@ data:
     path: ./data
   distribution:
     name: dir
-    beta: 0.1
+    beta: 0.5
   sampling_perc: 1
   client_split: 0
   keep_test: true
-  server_test: true # The original CIFAR-10 test set (without partitioning) is used to evaluate the generalization performance of the trained global model.
-  server_split: 0.0 # not used in this case
+  server_test: true 
+  server_split: 0.0
   uniform_test: false
 exp:
-  device: cpu
+  device: cuda
   seed: 42
 eval:
   task: classification
   eval_every: 1
-  pre_fit: false
-  post_fit: false
+  pre_fit: true
+  post_fit: true
 logger:
   name: WandBLog
   project: fluke_benchmarks
+  tags: [FedNova]
 protocol:
-  eligible_perc: 0.13
-  n_clients: 16
-  n_rounds: 100
+  eligible_perc: 1
+  n_clients: 20
+  n_rounds: 400
