--- a/configs/fedlc.yaml
+++ b/configs/fedlc.yaml
@@ -1,16 +1,14 @@
 hyperparameters:
   client:
-    batch_size: 128
-    local_epochs: 5
+    batch_size: 32
+    local_epochs: 10
     loss: CrossEntropyLoss
     optimizer:
-      lr: 0.01
-      momentum: 0.9
-    scheduler:
-      gamma: 1
-      step_size: 1
+      name: Adam
+      lr: 0.0002
+      # momentum: 0.9 # no decay
     tau: 0.1
   server:
     weighted: true
-  model: MNIST_2NN
+  model: cifar_fedlc_net.FedLCNet
 name: fluke.algorithms.fedlc.FedLC
