--- a/configs/fednova.yaml
+++ b/configs/fednova.yaml
@@ -1,17 +1,14 @@
 hyperparameters:
   client:
-    batch_size: 32
-    local_epochs: 2
+    batch_size: 128
+    local_epochs: 10
     loss: CrossEntropyLoss
     optimizer:
-      lr: 0.1
-      momentum: 0.9
-      # weight_decay: 0.0001
+      lr: 0.01
     scheduler:
-      name: MultiStepLR
-      milestones: [50]
-      gamma: 0.1
+      gamma: 1
+      step_size: 1
   server:
     weighted: true
-  model: vgg11.VGG11
+  model: ResNet18
 name: fluke.algorithms.fednova.FedNova
