--- a/configs/exp_moon.yaml
+++ b/configs/exp_moon.yaml
@@ -2,11 +2,12 @@
 # https://makgyver.github.io/fluke/configuration.html
 data:
   dataset:
-    name: cifar-10
+    name: cifar10
     path: ./data
   distribution:
     name: dir
     beta: 0.5
+    balanced: false
   sampling_perc: 1
   client_split: 0
   keep_test: true
@@ -14,13 +15,13 @@ data:
   server_split: 0.0 # not used in this case
   uniform_test: false
 exp:
-  device: cpu
+  device: cuda
   seed: 42
 eval:
   task: classification
   eval_every: 1
-  pre_fit: false
-  post_fit: false
+  pre_fit: true
+  post_fit: true
 logger:
   name: WandBLog
   project: fluke_benchmarks
