--- a/configs/fedaws.yaml
+++ b/configs/fedaws.yaml
@@ -1,20 +1,17 @@
 hyperparameters:
   client:
-    batch_size: 32
-    local_epochs: 5
+    batch_size: 64
+    local_epochs: 8
     loss: CrossEntropyLoss
     optimizer:
-      lr: 0.1
-      # momentum: 0.9
-      # weight_decay: 0.0001
-    scheduler:
-      gamma: 1
-      step_size: 1
+      lr: 0.001
+      momentum: 0.9
+      weight_decay: 0.0001
   server:
     weighted: true
     aws_lr: 0.1
-    aws_steps: 100
-    margin: 0.5
-    last_layer_name: "_head.fc3"
-  model: MNIST_2NN
+    aws_steps: 30
+    margin: 0.8
+    last_layer_name: "classifier"
+  model: ResNetX.ResNet
 name: fluke.algorithms.fedaws.FedAwS
