--- a/configs/exp.yaml
+++ b/configs/exp.yaml
@@ -16,6 +16,7 @@ data:
 exp:
   device: cuda
   seed: 42
+  inmemory: true
 eval:
   task: classification
   eval_every: 1
@@ -23,9 +24,8 @@ eval:
   post_fit: true
 logger:
   name: WandBLog
-  # name: WandBLog
   project: fluke_benchmarks
-  # entity: mlgroup
+  tags: [FedAVG]
 protocol:
   eligible_perc: 0.2
   n_clients: 100
