--- a/configs/fedadam.yaml
+++ b/configs/fedadam.yaml
@@ -1,15 +1,12 @@
 hyperparameters:
   client:
-    batch_size: 20
-    local_epochs: 1
+    batch_size: 50
+    local_epochs: 5
     loss: CrossEntropyLoss
     optimizer:
-      lr: 0.01
+      lr: 0.1
   server:
-    beta1: 0.9
-    beta2: 0.999
-    lr: 0.0316228 #log10(lr) = -1.5
     mode: adam
-    tau: 0.001
-  model: ResNet18GN
+    tau: 0.000001
+  model: CIFAR10_CNN.CIFAR_CNN
 name: fluke.algorithms.fedopt.FedOpt
