--- a/benchmarks/benchmarks_exp_configs/exp_lc.yaml
+++ b/benchmarks/benchmarks_exp_configs/exp_lc.yaml
@@ -2,15 +2,16 @@
 # https://makgyver.github.io/fluke/configuration.html
 data:
   dataset:
-    name: mnist
+    name: cifar10
     path: ./data
-    channel_dim: 1
   distribution:
-    name: iid
+    name: dir
+    beta: 0.1
+    balanced: false
   sampling_perc: 1
-  client_split: 0.03
+  client_split: 0
   keep_test: true
-  server_test: true
+  server_test: true # The original CIFAR-10 test set (without partitioning) is used to evaluate the generalization performance of the trained global model.
   server_split: 0.0 # not used in this case
   uniform_test: false
 exp:
@@ -24,8 +25,8 @@ eval:
 logger:
   name: WandBLog
   project: fluke_benchmarks
-  tags: [FedProx]
+  tags: [FedLC]
 protocol:
-  eligible_perc: 0.01
-  n_clients: 1000
-  n_rounds: 400
+  eligible_perc: 1
+  n_clients: 10
+  n_rounds: 100
