--- a/configs/exp_avg.yaml
+++ b/configs/exp_avg.yaml
@@ -4,11 +4,11 @@ data:
   dataset:
     name: mnist
     path: ./data
-    channel_dim: 1
+    channel_dim: true
   distribution:
     name: iid
   sampling_perc: 1
-  client_split: 0.03
+  client_split: 0.2
   keep_test: true
   server_test: true
   server_split: 0.0 # not used in this case
@@ -16,6 +16,7 @@ data:
 exp:
   device: cuda
   seed: 42
+  inmemory: true
 eval:
   task: classification
   eval_every: 1
@@ -24,8 +25,8 @@ eval:
 logger:
   name: WandBLog
   project: fluke_benchmarks
-  tags: [FedProx]
+  tags: [FedAVG]
 protocol:
-  eligible_perc: 0.01
-  n_clients: 1000
-  n_rounds: 400
+  eligible_perc: 0.2
+  n_clients: 100
+  n_rounds: 100
