--- a/configs/exp_scaffold.yaml
+++ b/configs/exp_scaffold.yaml
@@ -22,9 +22,8 @@ eval:
   post_fit: false
 logger:
   name: WandBLog
-  # name: WandBLog
   project: fluke_benchmarks
-  # entity: mlgroup
+  tags: [SCAFFOLD]
 protocol:
   eligible_perc: 0.2
   n_clients: 100
