--- a/emnist.yaml
+++ b/emnist.yaml
@@ -1,16 +1,16 @@
 hyperparameters:
   client:
     batch_size: 32
-    local_epochs: 10
+    local_epochs: 5
     loss: CrossEntropyLoss
     optimizer:
-      lr: 0.0002
-      # momentum: 0.9 # no decay
-    tau: 0.1
+      lr: 0.1
+      # momentum: 0.9
+      # weight_decay: 0.0001
     scheduler:
       gamma: 1
       step_size: 1
   server:
     weighted: true
-  model: cifar_fedlc_net.FedLCNet
-name: fluke.algorithms.fedlc.FedLC
+  model: MNIST_2NN
+name: fluke.algorithms.fedavg.FedAVG
